# CppTrader

./: .gitlinks  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CircularQueue.sln  CircularQueue.vcxproj  CircularQueueTest.vcxproj  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  MemoryPool.sln  MemoryPool.vcxproj  MemoryPoolTest.vcxproj  README_EXCEPTION_HANDLER.md  README_MEMORY_POOL.md  USAGE_GUIDE.md  build.bat  build.sh  build_gtest.bat  build_project.bat  build_vs.bat  compile.bat  config.ini  cpptrader-tests.vcxproj  cpptrader.props  cpptrader.sln  cpptrader.vcxproj  generate_solution.bat  simple_test.cpp  test.bat  trading_system_demo.vcxproj
MemoryPool/: MemoryPool.vcxproj
MemoryPoolTests/: MemoryPoolTests.vcxproj
common/: CMakeLists.txt  ThreadBase.cpp  ThreadBase.h  ThreadBase.sln  ThreadBase.vcxproj  ThreadBaseTest.cpp  ThreadBaseTest.vcxproj  circular_queue.h
examples/: exception_handler_example.cpp  matching_engine.cpp  trading_system_demo.cpp
exception_catcher/: CMakeLists.txt  ExceptionCatcher.sln
exception_catcher/ExceptionCatcher/: ExceptionCatcher.vcxproj
exception_catcher/TestExceptionCatcher/: TestExceptionCatcher.vcxproj
exception_catcher/common/: exception_catcher.cpp  exception_catcher.h
exception_catcher/tests/: test_exception_catcher.cpp
exception_catcher/trading_system/: README.md  TradingSystem.sln
exception_catcher/trading_system/MarketDataCollector/: MarketDataCollector.vcxproj
exception_catcher/trading_system/MarketDataProcessor/: MarketDataProcessor.vcxproj
exception_catcher/trading_system/TestMarketDataCollector/: TestMarketDataCollector.vcxproj
exception_catcher/trading_system/TestMarketDataProcessor/: TestMarketDataProcessor.vcxproj
exception_catcher/trading_system/TestTradingExecutor/: TestTradingExecutor.vcxproj
exception_catcher/trading_system/TradingExecutor/: TradingExecutor.vcxproj
exception_catcher/trading_system/include/: market_data_collector.h  market_data_processor.h  trading_executor.h
exception_catcher/trading_system/src/: market_data_collector.cpp  market_data_collector_impl.cpp  market_data_processor.cpp  trading_executor.cpp
exception_catcher/trading_system/tests/: test_market_data_collector.cpp  test_market_data_processor.cpp  test_trading_executor.cpp
gtest/: CMakeLists.txt  OrderBookTests.sln  OrderBookTests.vcxproj  README.md  build.bat  test_order_book.cpp
include/common/: memory_pool.h
include/trader/common/: ExceptionHandler.h  memory_pool.h  ring_buffer.h
include/trader/execution/: execution_manager.h  execution_manager.inl
include/trader/market_data/: market_data_collector.h  market_data_handler.h  market_data_player.h  market_data_player.inl  market_data_recorder.h  market_data_recorder.inl
include/trader/signal/: signal_generator.h  signal_generator.inl
include/trader/signal_generator/: signal_generator.h
modules/: GTest.cmake
new_memory_pool/: CMakeLists.txt  memory_pool.cpp  memory_pool.h  test_memory_pool.cpp
source/trader/common/: ExceptionHandler.cpp  memory_pool.cpp
source/trader/execution/: execution_manager.cpp
source/trader/market_data/: market_data_collector.cpp  market_data_player.cpp  market_data_recorder.cpp
source/trader/matching/: order_book.cpp
source/trader/signal/: signal_generator.cpp
source/trader/signal_generator/: signal_generator.cpp
src/common/: memory_pool.cpp  memory_pool_old.cpp
tests/: gtest_test.cpp  gtest_test.h  memory_pool_test.cpp  test_circular_queue.cpp  test_exception_handler.cpp  test_execution_manager.cpp  test_market_data.cpp  test_market_data_collector.cpp  test_memory_pool.cpp  test_ring_buffer.cpp  test_signal_generator.cpp
